[gd_scene load_steps=4 format=3 uid="uid://du8an53pinpk"]

[ext_resource type="Texture2D" uid="uid://dngteohd5qj2h" path="res://itens/1-task/water_pot.png" id="1_ay2up"]
[ext_resource type="Script" path="res://itens/scripts/water.gd" id="1_ibka5"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_b5xg8"]
size = Vector2(10, 10)

[node name="water" type="Area2D"]
script = ExtResource("1_ibka5")

[node name="WaterPot" type="Sprite2D" parent="."]
position = Vector2(0, -8)
texture = ExtResource("1_ay2up")

[node name="Texture" type="Sprite2D" parent="."]

[node name="Collision" type="CollisionShape2D" parent="."]
position = Vector2(0, -5)
shape = SubResource("RectangleShape2D_b5xg8")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="item_picked_up" from="." to="." method="_on_item_picked_up"]
